# tegra_stereo

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
include/tegra_stereo/: configuration.h  cost_aggregation.h  costs.h  debug.h  disparity_method.h  hamming_cost.h  median_filter.h  tegra_stereo_proc.hpp  util.h
src/: costs.cu  debug.cu  disparity_method.cu  hamming_cost.cu  median_filter.cu  tegra_stereo_proc.cpp
